# snake

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  environment.yml  flake.nix  pyproject.toml  setup.cfg  setup.py  snake.sublime-workspace
movie/: make  movie.py
snake/: ai.py  ai_cycle.py  config.py  exceptions.py  game.py  main.py
src/snake/: __init__.py  ai_cycle.py  config.py  dtypes.py  game.py  main.py
tests/snake/: test_ai_cycle.py
